linera-protocol/linera-views-derive/src/snapshots/linera_views_derive__tests__generate_clonable_view_code-8.snap
---
source: linera-views-derive/src/lib.rs
expression: pretty(generate_clonable_view_code(input).unwrap())
---
impl<MyParam> linera_views::views::ClonableView for TestView<MyParam>
where
    MyParam: Send + Sync + 'static,
    RegisterView<custom::GenericContext<T>, usize>: ClonableView,
    CollectionView<
        custom::GenericContext<T>,
        usize,
        RegisterView<custom::GenericContext<T>, usize>,
    >: ClonableView,
    Self: linera_views::views::View,
{
    fn clone_unchecked(&mut self) -> Result<Self, linera_views::ViewError> {
        Ok(Self {
            register: self.register.clone_unchecked()?,
            collection: self.collection.clone_unchecked()?,
        })
    }
}
